--- a/plutus-book/doc/non-fungible/nonfungible7.adoc
+++ b/plutus-book/doc/non-fungible/nonfungible7.adoc
@@ -12,7 +12,7 @@ module NonFungible.NonFungible7 where
 
 import           Language.PlutusTx
 import qualified Language.PlutusTx.AssocMap as AM
-import           Language.PlutusTx.Prelude  hiding (plus, minus)
+import           Language.PlutusTx.Prelude
 import           Ledger
 import qualified Ledger.Ada                 as A
 import qualified Ledger.Value               as V
@@ -45,10 +45,10 @@ validateNonFungible nf () name tx =
     && case (pendingTxInputs tx, pendingTxOutputs tx) of
         ([i], os@(o : _)) ->
             let inValue = pendingTxInValue i
-            in     foldl f V.zero os
-                    == (inValue `V.plus` v3)
+            in     foldMap pendingTxOutValue os
+                    == (inValue + v3)
                 && pendingTxOutValue o
-                    == (inValue `V.plus` v2)
+                    == (inValue + v2)
                 && V.valueOf inValue s name == 0
                 && case pendingTxOutHashes o of
                     Just (vh, _) -> vh == ownHash tx
@@ -60,11 +60,8 @@ validateNonFungible nf () name tx =
 
     v, v2, v3 :: Value
     v  = V.singleton s name 1
-    v2 = v `V.plus` v
-    v3 = v2 `V.plus` v
-
-    f :: Value -> PendingTxOut -> Value
-    f w o = w `V.plus` pendingTxOutValue o
+    v2 = v + v
+    v3 = v2 + v
 
 mkNonFungibleRedeemer :: String -> RedeemerScript
 mkNonFungibleRedeemer name =
@@ -108,7 +105,7 @@ start = do
     void $ createTxAndSubmit
         defaultSlotRange
         Set.empty
-        [mkNonFungibleTxOut nf V.zero]
+        [mkNonFungibleTxOut nf zero]
 ----
 ////
 
@@ -128,10 +125,10 @@ forge n = do
     case findOut (nonFungibleSymbol nf) $ Map.toList outs of
         Just (ref, o) -> do
             let v    = nonFungibleValue nf n
-                v2   = v `V.plus` v
-                v3   = v2 `V.plus` v
+                v2   = v + v
+                v3   = v2 + v
                 vIn  = txOutValue o
-                vOut = vIn `V.plus` v2
+                vOut = vIn + v2
             signTxAndSubmit_ Tx
                 { txInputs     = Set.singleton $ scriptTxIn
                                     ref
@@ -140,7 +137,7 @@ forge n = do
                 , txOutputs    = [ mkNonFungibleTxOut nf vOut
                                  , pubKeyTxOut v key
                                  ]
-                , txFee        = A.zero
+                , txFee        = zero
                 , txForge      = v3
                 , txValidRange = defaultSlotRange
                 , txSignatures = Map.empty
@@ -153,7 +150,7 @@ forge n = do
             -> Maybe (TxOutRef, TxOut)
     findOut s xs =
         let ys = filter f xs
-        in  case find (zero . snd) ys of                            -- <1>
+        in  case find (zeroValue . snd) ys of                            -- <1>
                 Just x  -> Just x
                 Nothing -> find (ours s . snd) ys
 
@@ -167,8 +164,8 @@ forge n = do
         Nothing -> False
         Just m  -> any (>= 2) [i | (_, i) <- AM.toList m]
 
-    zero :: TxOut -> Bool
-    zero o = txOutValue o == V.zero
+    zeroValue :: TxOut -> Bool
+    zeroValue o = txOutValue o == zero
 
 $(mkFunctions ['start, 'forge])
 ----
